fix reference to destination photo

--- a/index.html
+++ b/index.html
@@ -630,7 +630,7 @@
     </section>
     <!-- TODO: integrate these changes better into CSS and the overall structure -->
     <div style="display:flex; justify-content:center;">
-        <img src="./cancun-destination.png" style="width:100%; max-width:800px;" />
+        <img src="./assets/cancun-destination.png" style="width:100%; max-width:800px;" />
     </div>
     <!-- Location & Accommodation Section -->
     <section class="location" id="location">
