add rsvp page with RSVP assets

--- a/index.html
+++ b/index.html
@@ -717,6 +717,10 @@
             </div>
             <div class="timeline-day">Saturday</div>
             <div class="timeline-item">
+                <div class="timeline-time">5:00 PM</div>
+                <div class="timeline-info">Shuttles leave from Emporio</div>
+            </div>
+            <div class="timeline-item">
                 <div class="timeline-time">6:00 PM</div>
                 <div class="timeline-info">Wedding ceremony begins</div>
             </div>
@@ -733,8 +737,16 @@
                 <div class="timeline-info">Dancing with DJ</div>
             </div>
             <div class="timeline-item">
-                <div class="timeline-time">2:00 AM</div>
+                <div class="timeline-time">11:30 PM</div>
+                <div class="timeline-info">First shuttle returns to the hotel</div>
+            </div>
+            <div class="timeline-item">
+                <div class="timeline-time">1:00 AM</div>
                 <div class="timeline-info">Mariachis and tacos to close the night!</div>
+            </div>
+            <div class="timeline-item">
+                <div class="timeline-time">2:00 AM</div>
+                <div class="timeline-info">Last shuttle to the hotel -- it's a long walk!</div>
             </div>
         </div>
         <!-- Spanish Timeline -->
@@ -757,6 +769,10 @@
             </div>
             <div class="timeline-day">Sábado</div>
             <div class="timeline-item">
+                <div class="timeline-time">5:00 PM</div>
+                <div class="timeline-info">El transporte saldrá de Emporio</div>
+            </div>
+            <div class="timeline-item">
                 <div class="timeline-time">6:00 PM</div>
                 <div class="timeline-info">Comienza la ceremonia</div>
             </div>
@@ -773,8 +789,16 @@
                 <div class="timeline-info">Baile con DJ</div>
             </div>
             <div class="timeline-item">
-                <div class="timeline-time">2:00 AM</div>
+                <div class="timeline-time">11:30 PM</div>
+                <div class="timeline-info">El primer transporte saldrá de regreso al hotel</div>
+            </div>
+            <div class="timeline-item">
+                <div class="timeline-time">1:00 AM</div>
                 <div class="timeline-info">¡Mariachis y tacos para cerrar la noche!</div>
+            </div>
+            <div class="timeline-item">
+                <div class="timeline-time">2:00 AM</div>
+                <div class="timeline-info">El transporte saldrá de regreso al hotel</div>
             </div>
         </div>
     </section>
@@ -930,10 +954,11 @@
                     </a>
                 </div>
                 <div class="activity-card" style="margin:0.5rem; display:block; overflow-wrap:anywhere;">
-                    <a href="https://www.instagram.com/explore/search/keyword/?q=%23BetyAndLucas">
+                    <a href="https://www.instagram.com/explore/tags/BetyAndLucas/" target="_blank"
+                        rel="noopener noreferrer">
                         <img src="./assets/qr/instagram-qr-code.png" style="width:100%;">
+                        #BetyAndLucas
                     </a>
-                    #BetyAndLucas
                     #BeachPleaseItsWeddingWeek
                 </div>
 
