use relative URL?

--- a/rsvp.html
+++ b/rsvp.html
@@ -235,7 +235,7 @@
             </div>
             <div class="glitter"></div>
         </div>
-        <a href="https://bety.lucasdurand.xyz" class="invitation" target="_blank">
+        <a href="/" class="invitation" target="_blank">
             <div class="invitation-text">
                 Invitación Virtual Para La Boda de <br /> Beatriz A. Fernández Campos y Lucas M. Durand
             </div>
