--- a/index.html
+++ b/index.html
@@ -936,8 +936,8 @@
     </section>
     <!-- RSVP Section -->
     <div class="rsvp-container" id="rsvp">
-        <a class="rsvp-btn lang-en" href="#rsvp">RSVP Now</a>
-        <a class="rsvp-btn lang-es hidden" href="#rsvp">Confirmar Asistencia</a>
+        <a class="rsvp-btn lang-en" href="https://withjoy.com/bety-and-lucas/rsvp">RSVP Now</a>
+        <a class="rsvp-btn lang-es hidden" href="https://withjoy.com/bety-and-lucas/rsvp">Confirmar Asistencia</a>
     </div>
 
     <section class="details" style="margin-bottom:1rem;">
