Add RSVP helper button in top of page Tweaks to sizing of RSVP card for smaller screens

--- a/index.html
+++ b/index.html
@@ -538,17 +538,22 @@
         <ul>
             <li><a href="#header" title="Home"><i class="fas fa-home"></i></a></li>
             <li><a href="#location" title="Location"><i class="fas fa-map-pin"></i></a></li>
-            <li><a href="#timeline" title="Timeline"><i class="fas fa-calendar-alt"></i></a></li>
-            <li><a href="#activities" title="Activities"><i class="fas fa-map-marked-alt"></i></a></li>
-            <li><a href="#faq" title="FAQ"><i class="fas fa-question"></i></a></li>
-            <li><a href="#rsvp" title="RSVP"><i class="fas fa-envelope"></i></a></li>
+            <li><a href="#timeline" title="Timeline"><i class="fas fa-timeline"></i></a></li>
+            <li><a href="#activities" title="Activities"><i class="fas fa-puzzle-piece"></i></a></li>
+            <li><a href="#faq" title="FAQ"><i class="fas fa-circle-question"></i></a></li>
+            <li><a href="#rsvp" title="RSVP"><i class="fas fa-calendar-check"></i></a></li>
         </ul>
     </nav>
 
     <div class="language-toggle">
+        <a href="#rsvp"><button class="language-btn lang-en">RSVP ⬇️</button></a>
+        <a href="#rsvp"><button class="language-btn lang-es hidden" href="#rsvp">Confirmar
+                Asistencia ⬇️
+            </button></a>
         <button class="language-btn" onclick="toggleLanguage('en')">EN</button>
         <button class="language-btn" onclick="toggleLanguage('es')">ES</button>
     </div>
+
     <header id="header">
         <h1 class="lang-en">Lucas &amp; Beatriz</h1>
         <h1 class="lang-es hidden">Lucas &amp; Beatriz</h1>
