--- a/rsvp.html
+++ b/rsvp.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Playfair+Display:wght@500&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Sacramento&family=Playfair+Display:wght@500&display=swap"
         rel="stylesheet">
     <style>
         :root {
@@ -14,9 +14,9 @@
 
         .container {
             position: relative;
-            width: 400px;
-            height: 280px;
-            margin: 200px auto;
+            width: clamp(350px, 40%, 500px);
+            aspect-ratio: 5/3;
+            margin: clamp(10%, 12vh, 300px) auto;
             cursor: pointer;
         }
 
@@ -105,7 +105,7 @@
             color: #5c2d1d;
             border-radius: 8px;
             box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
-            font-family: 'Great Vibes', cursive;
+            font-family: 'Sacramento', cursive;
             z-index: 1;
         }
 
