--- a/rsvp.html
+++ b/rsvp.html
@@ -12,9 +12,11 @@
             --red: #471c1c;
         }
 
+
         .container {
             position: relative;
-            width: clamp(350px, 40%, 500px);
+            /* width: clamp(400px, 50vw, 800px); */
+            width: clamp(0px, calc(33vh*5/3), 95%);
             aspect-ratio: 5/3;
             margin: clamp(10%, 12vh, 300px) auto;
             cursor: pointer;
@@ -162,11 +164,11 @@
         .external-seal {
             position: absolute;
             /* bottom: 20px; */
-            top: 30%;
+            top: 22.5%;
             left: 50%;
             transform: translateX(-50%);
-            width: 60px;
-            height: 60px;
+            width: 20%;
+            /* height: /60px; */
             z-index: 3;
             /* transition: 0.8s; */
             filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.3));
@@ -222,7 +224,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container full-mobile-half-desktop">
         <div class="envelope">
             <div class="flap">
                 <div class="flap-front"></div>
@@ -231,7 +233,7 @@
                 </div>
             </div>
             <div class=" external-seal">
-                <object type="image/svg+xml" data="./wax-seal.svg" class="wax-seal"></object>
+                <object type="image/svg+xml" width="100%" data="./wax-seal.svg" class="wax-seal"></object>
             </div>
             <div class="glitter"></div>
         </div>
