--- a/rsvp.html
+++ b/rsvp.html
@@ -4,226 +4,17 @@
 <head>
     <link href="https://fonts.googleapis.com/css2?family=Sacramento&family=Playfair+Display:wght@500&display=swap"
         rel="stylesheet">
-    <style>
-        :root {
-            --dark: #09240d;
-            --primary: #06402b;
-            --secondary: #085957;
-            --red: #471c1c;
-        }
-
-
-        .container {
-            position: relative;
-            /* width: clamp(400px, 50vw, 800px); */
-            width: clamp(0px, calc(33vh*5/3), 95%);
-            aspect-ratio: 5/3;
-            margin: clamp(10%, 12vh, 300px) auto;
-            cursor: pointer;
-        }
-
-        .envelope {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            background: linear-gradient(45deg, var(--dark), var(--secondary));
-            border-radius: 4px;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
-            transition: transform 0.5s;
-        }
-
-
-        .flap {
-            position: absolute;
-            width: 100%;
-            height: 40%;
-            transform-origin: top center;
-            transform-style: preserve-3d;
-            transition: transform 0.6s cubic-bezier(0.4, 0, 0.2, 1);
-            border-radius: 4px 4px 0 0;
-            z-index: 2;
-        }
-
-        /* Front side of flap */
-        .flap-front {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            background: linear-gradient(160deg, var(--primary) 40%, var(--dark) 90%);
-            backface-visibility: hidden;
-            border-radius: 4px 4px 0 0;
-            box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
-            transform: rotateX(0deg);
-        }
-
-        /* Back side of flap (hidden design) */
-        .flap-back {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background:
-                radial-gradient(circle at center, transparent 60%, rgba(255, 255, 255, 0.3) 60.5%, transparent 61%) 50% 30% / 100% 100%,
-                linear-gradient(45deg, var(--primary), black);
-            backface-visibility: hidden;
-            border-radius: 4px 4px 0 0;
-            transform: rotateX(180deg);
-        }
-
-        .flap-glue-strip {
-            opacity: 0.4;
-            background-size: cover;
-            background-image: url('./assets/flowers/pink-flower-seamless-pattern.jpg');
-            width: calc(100% - 2rem);
-            height: calc(100% - 2rem);
-        }
-
-        .envelope:before {
-            content: '';
-            position: absolute;
-            bottom: -10px;
-            left: 5%;
-            width: 90%;
-            height: 20px;
-            background: rgba(0, 0, 0, 0.1);
-            border-radius: 50%;
-            filter: blur(4px);
-        }
-
-        .invitation {
-            position: absolute;
-            width: 90%;
-            /* height: 180px; */
-            height: fit-content;
-            background: linear-gradient(45deg, #415345, #edffee);
-            left: 5%;
-            top: -200px;
-            opacity: 0;
-            transition: all 0.8s 0.3s;
-            text-align: center;
-            text-decoration: none;
-            color: #5c2d1d;
-            border-radius: 8px;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
-            font-family: 'Sacramento', cursive;
-            z-index: 1;
-        }
-
-        .container:not(:hover) .invitation {
-            transition: all 0.5s;
-            /* speed up on close to zip in before the flap closes*/
-        }
-
-        .container:hover .flap {
-            transform: perspective(800px) rotateX(180deg);
-            box-shadow: 0 -10px 20px rgba(0, 0, 0, 0.2);
-            background-image: linear-gradient(160deg, var(--primary) 40%, var(--secondary) 90%);
-        }
-
-        .container:hover .flap::after {
-            /* display: block; */
-            opacity: 1;
-        }
-
-        .container:hover .invitation {
-            top: 50px;
-            opacity: 1;
-        }
-
-        .invitation-text {
-            text-align: center;
-            padding: 25px;
-            position: relative;
-        }
-
-        .invitation-text::before {
-            display: none;
-        }
-
-        .invitation img {
-            max-width: calc(100% - 2rem);
-            border-bottom-left-radius: inherit;
-            border-bottom-right-radius: 8px;
-        }
-
-        h2 {
-            font-size: 2.5em;
-            margin: 0;
-            color: #5c2d1d;
-            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
-        }
-
-        p {
-            font-size: 1.2em;
-            margin: 10px 0;
-        }
-
-        /* Wax Seal Styles */
-        .external-seal {
-            position: absolute;
-            /* bottom: 20px; */
-            top: 22.5%;
-            left: 50%;
-            transform: translateX(-50%);
-            width: 20%;
-            /* height: /60px; */
-            z-index: 3;
-            /* transition: 0.8s; */
-            filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.3));
-            transition: opacity 0.4s cubic-bezier(0.4, 0, 0.2, 1), transform 3s;
-            opacity: 1;
-
-        }
-
-        .wax-seal {
-            cursor: pointer;
-            /* transition: transform 0.8s; */
-        }
-
-        .wax-seal:hover {
-            transform: scale(1.05);
-        }
-
-        .seal-text {
-            font-family: 'Playfair Display', serif;
-            font-weight: 500;
-            fill: #ffffff;
-            text-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
-        }
-
-        .glitter {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            background: radial-gradient(circle at 50% 50%,
-                    rgba(255, 255, 255, 0.8) 0%,
-                    rgba(255, 255, 255, 0) 70%);
-            opacity: 0;
-            transition: opacity 0.3s;
-        }
-
-        .container:hover .glitter {
-            opacity: 0.3;
-        }
-
-        .container:hover .external-seal {
-            opacity: 0;
-            transition: opacity 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-            /* Faster fade-out */
-        }
-
-        .container:not(:hover) .external-seal {
-            transition:
-                opacity 0.4s cubic-bezier(0.4, 0, 0.2, 1) 0.6s,
-                /* 0.6s delay matches flap duration */
-                transform 0.3s;
-        }
-    </style>
+    <link href="./rsvp.css" rel="stylesheet">
+    <link href="./common.css" rel="stylesheet">
+    <script src="./common.js"></script>
 </head>
 
 <body>
+    <div class="language-toggle">
+        <button class="language-btn" onclick="toggleLanguage('en')">EN</button>
+        <button class="language-btn" onclick="toggleLanguage('es')">ES</button>
+    </div>
+
     <div class="container full-mobile-half-desktop">
         <div class="envelope">
             <div class="flap">
@@ -232,16 +23,23 @@
                     <div class="flap-glue-strip"></div>
                 </div>
             </div>
-            <div class=" external-seal">
-                <object type="image/svg+xml" width="100%" data="./wax-seal.svg" class="wax-seal"></object>
+            <div class="external-seal">
+                <object type="image/svg+xml" width="100%" data="./assets/wax-seal.svg" class="wax-seal"></object>
             </div>
             <div class="glitter"></div>
         </div>
         <a href="/" class="invitation" target="_blank">
             <div class="invitation-text">
-                Invitación Virtual Para La Boda de <br /> Beatriz A. Fernández Campos y Lucas M. Durand
+                <!-- <div class="lang-es hidden">Invitación Virtual Para La Boda de <br /> Beatriz A. Fernández Campos <br />
+                    y
+                    Lucas M.
+                    Durand</div>
+                <div class="lang-en">Virtual Invite To The Wedding Of<br /> Beatriz A. Fernández Campos <br /> and Lucas
+                    M.
+                    Durand</div> -->
             </div>
-            <img src="assets/digital-rsvp.png" />
+            <img src="./assets/digital-rsvp-es.png" class="lang-es hidden" />
+            <img src="./assets/digital-rsvp-es.png" class="lang-en" />
         </a>
     </div>
 </body>
