switch to single linktree qr

--- a/index.html
+++ b/index.html
@@ -439,24 +439,10 @@
                 </a>or in our album, and if you feel like a challenge, try out one of our favourite
                 games!
             </p>
-            <div style="display:grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));">
-                <div class="activity-card" style="margin:0.5rem;display:block;">
-                    <a href="https://photos.app.goo.gl/HhcwBdpmeCpjQpxE9">
-                        <img src="./assets/qr/photos-qr-code.png" style="width:100%;">
-                    </a>
-                </div>
-                <div class="activity-card" style="margin:0.5rem; display:block; overflow-wrap:anywhere;">
-                    <a href="https://www.instagram.com/explore/tags/BetyAndLucas/" target="_blank"
-                        rel="noopener noreferrer">
-                        <img src="./assets/qr/instagram-qr-code.png" style="width:100%;">
-                        #BetyAndLucas
-                    </a>
-                    #BeachPleaseItsWeddingWeek
-                </div>
-
-                <div class="activity-card" style="margin:0.5rem;display:block;">
-                    <a href="https://connectionsplus.io/game/u9Uic4" border="0" style="cursor:default"
-                        rel="nofollow"><img src="./assets/qr/connections-qr-code.png" style="width:100%;"></a>
+            <div style="display:flex; justify-content:center;">
+                <div class="activity-card" style="margin:0.5rem;display:block;max-width:350px;">
+                    <a href="https://linktr.ee/betyandlucas" border="0" style="cursor:default" rel="nofollow"><img
+                            src="./assets/qr/linktree_color.png" style="width:100%;"></a>
                 </div>
             </div>
         </div>
