Pointless tweaking of margins? Who knows at this point

--- a/rsvp.html
+++ b/rsvp.html
@@ -27,20 +27,21 @@
                 <object type="image/svg+xml" width="100%" data="./assets/wax-seal.svg" class="wax-seal"></object>
             </div>
             <div class="glitter"></div>
+            <a href="/" class="invitation" target="_blank">
+                <!-- <div class="invitation-text">
+                    <div class="lang-es hidden">Invitación Virtual Para La Boda de <br /> Beatriz A. Fernández Campos <br />
+                        y
+                        Lucas M.
+                        Durand</div>
+                    <div class="lang-en">Virtual Invite To The Wedding Of<br /> Beatriz A. Fernández Campos <br /> and Lucas
+                        M.
+                        Durand</div>
+                </div> -->
+                <img src="./assets/digital-rsvp-es.png" class="lang-es hidden" />
+                <img src="./assets/digital-rsvp-es.png" class="lang-en" />
+            </a>
+
         </div>
-        <a href="/" class="invitation" target="_blank">
-            <div class="invitation-text">
-                <!-- <div class="lang-es hidden">Invitación Virtual Para La Boda de <br /> Beatriz A. Fernández Campos <br />
-                    y
-                    Lucas M.
-                    Durand</div>
-                <div class="lang-en">Virtual Invite To The Wedding Of<br /> Beatriz A. Fernández Campos <br /> and Lucas
-                    M.
-                    Durand</div> -->
-            </div>
-            <img src="./assets/digital-rsvp-es.png" class="lang-es hidden" />
-            <img src="./assets/digital-rsvp-es.png" class="lang-en" />
-        </a>
     </div>
 </body>
 
