Fix attraction card in es view

--- a/index.html
+++ b/index.html
@@ -355,10 +355,10 @@
                     </div>
                 </div>
                 <div class="activity-card map-card">
-                    <img src="./assets/cancun-local-attractions.png" style="max-width:100%; margin: 1rem auto;">
+                    <img src="./assets/cancun-local-attractions.png">
                 </div>
 
-                <div class="activity-card">
+                <div class=" activity-card">
                     <div class="activity-icon"><i class="fas fa-umbrella-beach"></i></div>
                     <div class="activity-content">
                         <h3>Playas de la Zona Hotelera</h3>
