Add english invite view

--- a/rsvp.html
+++ b/rsvp.html
@@ -29,16 +29,18 @@
             <div class="glitter"></div>
             <a href="/" class="invitation" target="_blank">
                 <!-- <div class="invitation-text">
-                    <div class="lang-es hidden">Invitación Virtual Para La Boda de <br /> Beatriz A. Fernández Campos <br />
+                    <div class="lang-es hidden">Invitación Virtual Para La Boda de <br /> Beatriz A. Fernández Campos
+                        <br />
                         y
                         Lucas M.
                         Durand</div>
-                    <div class="lang-en">Virtual Invite To The Wedding Of<br /> Beatriz A. Fernández Campos <br /> and Lucas
+                    <div class="lang-en">Virtual Invite To The Wedding Of<br /> Beatriz A. Fernández Campos <br /> and
+                        Lucas
                         M.
                         Durand</div>
                 </div> -->
                 <img src="./assets/digital-rsvp-es.png" class="lang-es hidden" />
-                <img src="./assets/digital-rsvp-es.png" class="lang-en" />
+                <img src="./assets/digital-rsvp-en.png" class="lang-en" />
             </a>
 
         </div>
