--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>Lucas &amp; Beatriz - Cancún Wedding</title>
+    <title>Lucas &amp; Beatriz</title>
     <link
         href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&amp;family=Montserrat:wght@300;400&amp;display=swap"
         rel="stylesheet" />
