--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             <h2>Ceremony &amp; Accommodations</h2>
             <h3>Jardin del Mar</h3>
             <p>Blvd. Kukulcan Km 13.5, Zona Hotelera<br />Cancún, Quintana Roo 77500, Mexico</p>
-            <a class="map-link" href="https://www.jardindelmar.com" target="_blank">Visit Jardin del Mar Website →</a>
+            <a class="map-link" href="https://www.jardindelmar.com.mx/locación?lang=en" target="_blank">Visit Jardin del Mar Website →</a>
             <div class="map-container">
                 <iframe allowfullscreen="" height="450" loading="lazy" referrerpolicy="no-referrer-when-downgrade"
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2380643.159976702!2d-87.2372621!3d20.9470756!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f3!3m3!1m2!1s0x8f4e86bdd8a05967%3A0x194721cc2728ea1b!2sJard%C3%ADn%20del%20Mar!5e0!3m2!1sen!2sus!16s%2Fg%2F11c75m3fl3&amp;markers=color:red%7C20.9470756,-87.2372621&amp;zoom=15"
