Add missing spanish sections

--- a/index.html
+++ b/index.html
@@ -128,7 +128,8 @@
             <h2>Ceremony &amp; Accommodations</h2>
             <h3>Jardin del Mar</h3>
             <p>Blvd. Kukulcan Km 13.5, Zona Hotelera<br />Cancún, Quintana Roo 77500, Mexico</p>
-            <a class="map-link" href="https://www.jardindelmar.com.mx/locación?lang=en" target="_blank">Visit Jardin del Mar Website →</a>
+            <a class="map-link" href="https://www.jardindelmar.com.mx/locación?lang=en" target="_blank">Visit Jardin del
+                Mar Website →</a>
             <div class="map-container">
                 <iframe allowfullscreen="" height="450" loading="lazy" referrerpolicy="no-referrer-when-downgrade"
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2380643.159976702!2d-87.2372621!3d20.9470756!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f3!3m3!1m2!1s0x8f4e86bdd8a05967%3A0x194721cc2728ea1b!2sJard%C3%ADn%20del%20Mar!5e0!3m2!1sen!2sus!16s%2Fg%2F11c75m3fl3&amp;markers=color:red%7C20.9470756,-87.2372621&amp;zoom=15"
@@ -183,6 +184,63 @@
         </div>
         <div class="lang-es hidden">
             <!-- Spanish version of location section -->
+            <h2>Ceremonia y Hospedaje</h2>
+            <h3>Jardín del Mar</h3>
+            <p>Blvd. Kukulcán Km 13.5, Zona Hotelera<br />Cancún, Quintana Roo 77500, México</p>
+            <a class="map-link" href="https://www.jardindelmar.com.mx/locación?lang=es" target="_blank">Visita el sitio
+                web de Jardín del Mar →</a>
+            <div class="map-container">
+                <iframe allowfullscreen="" height="450" loading="lazy" referrerpolicy="no-referrer-when-downgrade"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2380643.159976702!2d-87.2372621!3d20.9470756!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f3!3m3!1m2!1s0x8f4e86bdd8a05967%3A0x194721cc2728ea1b!2sJard%C3%ADn%20del%20Mar!5e0!3m2!1sen!2sus!16s%2Fg%2F11c75m3fl3&amp;markers=color:red%7C20.9470756,-87.2372621&amp;zoom=15"
+                    style="border:0;" width="100%">
+                </iframe>
+            </div>
+            <div class="hotel-info">
+                <h3>Alojamiento para Invitados</h3>
+                <p><strong>Emporio Cancún</strong><br />
+                    Blvd. Kukulcán Km 17, Zona Hotelera<br />
+                    Cancún, Quintana Roo 77500, México</p>
+                <p>Código para reservar: LUCAS-BEATRIZ</p>
+
+                <h4>Cómo llegar a Emporio Cancún</h4>
+                <div class="transport-options">
+                    <div class="transport-card">
+                        <h4><i class="fas fa-taxi"></i> Taxi</h4>
+                        <p>Los taxis oficiales del aeropuerto cuestan aproximadamente $50 USD por hasta 4 personas.
+                            Tiempo estimado: 30 minutos.</p>
+                    </div>
+                    <div class="transport-card">
+                        <h4><i class="fas fa-shuttle-van"></i> Transporte del Hotel</h4>
+                        <p>Emporio ofrece traslados privados por $65 USD por trayecto (reserva previa requerida).</p>
+                    </div>
+                    <div class="transport-card">
+                        <h4><i class="fas fa-car"></i> Renta de Auto</h4>
+                        <p>Agencias de renta disponibles en el aeropuerto. El hotel cuenta con estacionamiento por $15
+                            USD al día.</p>
+                    </div>
+                </div>
+
+                <div class="nearby-options">
+                    <h4>Otras Opciones Cercanas:</h4>
+                    <div class="hotel-list">
+                        <div class="hotel-card">
+                            <h5>Hyatt Ziva Cancún</h5>
+                            <div class="hotel-distance">A 0.5 km del lugar</div>
+                            <p>Resort de lujo con todo incluido</p>
+                        </div>
+                        <div class="hotel-card">
+                            <h5>Marriott Cancún Resort</h5>
+                            <div class="hotel-distance">A 0.8 km del lugar</div>
+                            <p>Frente a la playa con spa</p>
+                        </div>
+                        <div class="hotel-card">
+                            <h5>Opciones en Airbnb</h5>
+                            <div class="hotel-distance">Varias ubicaciones</div>
+                            <p>Muchos departamentos disponibles en la Zona Hotelera</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
     <!-- Timeline Section -->
@@ -422,6 +480,31 @@
         </div>
         <div class="lang-es hidden">
             <!-- Spanish version of FAQs -->
+            <h2>Preguntas Frecuentes</h2>
+            <div class="faq-item">
+                <div class="faq-question">
+                    <i class="fas fa-child"></i>
+                    <span>¿Pueden asistir niños a la boda?</span>
+                </div>
+                <p>Amamos a los más pequeños, pero esta será una celebración solo para adultos. Agradecemos que hagan
+                    los arreglos necesarios para que puedan acompañarnos.</p>
+            </div>
+            <div class="faq-item">
+                <div class="faq-question">
+                    <i class="fas fa-shoe-prints"></i>
+                    <span>¿Qué debo usar para la ceremonia en la playa?</span>
+                </div>
+                <p>Recomendamos calzado adecuado para la arena — sandalias, tacones anchos o cuñas están perfectos.
+                    ¡Evita los stilettos! El código de vestimenta es elegante playero.</p>
+            </div>
+            <div class="faq-item">
+                <div class="faq-question">
+                    <i class="fas fa-umbrella-beach"></i>
+                    <span>¿Cómo es el clima en marzo?</span>
+                </div>
+                <p>Marzo es ideal en Cancún, con temperaturas promedio de 28°C durante el día y 21°C por la noche. Las
+                    noches pueden ser frescas, así que lleva un suéter ligero.</p>
+            </div>
         </div>
     </section>
     <!-- RSVP Section -->
@@ -440,12 +523,26 @@
                 games!
             </p>
             <div style="display:flex; justify-content:center;">
-                <div class="activity-card" style="margin:0.5rem;display:block;max-width:350px;">
+                <div class="activity-card" style="margin:0.5rem;display:block;max-width:250px;">
                     <a href="https://linktr.ee/betyandlucas" border="0" style="cursor:default" rel="nofollow"><img
                             src="./assets/qr/linktree_color.png" style="width:100%;"></a>
                 </div>
             </div>
         </div>
+        <div class="lang-es">
+            <h2 style="text-align:center;">La Semana de la Boda!</h2>
+            <p>¡Llegó el momento! Aquí hay algunos enlaces útiles. Si tomas fotos o videos durante los eventos,
+                compártelos con nuestro hashtag <a href="https://www.instagram.com/explore/tags/BetyAndLucas/"
+                    target="_blank">#BetyAndLucas</a> o súbelos a nuestro álbum. Y si te animas, ¡échale un ojo a uno de
+                nuestros juegos favoritos!</p>
+            <div style="display:flex; justify-content:center;">
+                <div class="activity-card" style="margin:0.5rem;display:block;max-width:250px;">
+                    <a href="https://linktr.ee/betyandlucas" border="0" style="cursor:default" rel="nofollow"><img
+                            src="./assets/qr/linktree_color.png" style="width:100%;"></a>
+                </div>
+            </div>
+        </div>
+
     </section>
 
     <footer>
