Adjust timeline spacing and add down arrow at bottom

--- a/index.html
+++ b/index.html
@@ -244,109 +244,113 @@
         </div>
     </section>
     <!-- Timeline Section -->
-    <section class="timeline" id="timeline">
+    <section id="timeline">
         <!-- English Timeline -->
         <div class="lang-en">
             <h2>Event Timeline</h2>
-            <div class="timeline-day">Wednesday</div>
-            <div class="timeline-item">
-                <div class="timeline-time">All Day</div>
-                <div class="timeline-info">Family arrives and settles in</div>
-            </div>
-            <div class="timeline-day">Thursday</div>
-            <div class="timeline-item">
-                <div class="timeline-time">Evening</div>
-                <div class="timeline-info">Guests arrive, family dinner at Navios restaurant</div>
-            </div>
-            <div class="timeline-day">Friday</div>
-            <div class="timeline-item">
-                <div class="timeline-time">7:00 PM</div>
-                <div class="timeline-info">Icebreaker event at the hotel: drinks, canapés, and mingling</div>
-            </div>
-            <div class="timeline-day">Saturday</div>
-            <div class="timeline-item">
-                <div class="timeline-time">5:00 PM</div>
-                <div class="timeline-info">Shuttles leave from Emporio</div>
-            </div>
-            <div class="timeline-item">
-                <div class="timeline-time">6:00 PM</div>
-                <div class="timeline-info">Wedding ceremony begins</div>
-            </div>
-            <div class="timeline-item">
-                <div class="timeline-time">7:00 PM</div>
-                <div class="timeline-info">Cocktail hour</div>
-            </div>
-            <div class="timeline-item">
-                <div class="timeline-time">8:00 PM</div>
-                <div class="timeline-info">Dinner and live saxophone music</div>
-            </div>
-            <div class="timeline-item">
-                <div class="timeline-time">10:00 PM</div>
-                <div class="timeline-info">Dancing with DJ</div>
-            </div>
-            <div class="timeline-item">
-                <div class="timeline-time">11:30 PM</div>
-                <div class="timeline-info">First shuttle returns to the hotel</div>
-            </div>
-            <div class="timeline-item">
-                <div class="timeline-time">1:00 AM</div>
-                <div class="timeline-info">Mariachis and tacos to close the night!</div>
-            </div>
-            <div class="timeline-item">
-                <div class="timeline-time">2:00 AM</div>
-                <div class="timeline-info">Last shuttle to the hotel -- it's a long walk!</div>
+            <div class="timeline">
+                <div class="timeline-day">Wednesday</div>
+                <div class="timeline-item">
+                    <div class="timeline-time">All Day</div>
+                    <div class="timeline-info">Family arrives and settles in</div>
+                </div>
+                <div class="timeline-day">Thursday</div>
+                <div class="timeline-item">
+                    <div class="timeline-time">Evening</div>
+                    <div class="timeline-info">Guests arrive, family dinner at Navios restaurant</div>
+                </div>
+                <div class="timeline-day">Friday</div>
+                <div class="timeline-item">
+                    <div class="timeline-time">7:00 PM</div>
+                    <div class="timeline-info">Icebreaker event at the hotel: drinks, canapés, and mingling</div>
+                </div>
+                <div class="timeline-day">Saturday</div>
+                <div class="timeline-item">
+                    <div class="timeline-time">5:00 PM</div>
+                    <div class="timeline-info">Shuttles leave from Emporio</div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-time">6:00 PM</div>
+                    <div class="timeline-info">Wedding ceremony begins</div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-time">7:00 PM</div>
+                    <div class="timeline-info">Cocktail hour</div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-time">8:00 PM</div>
+                    <div class="timeline-info">Dinner and live saxophone music</div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-time">10:00 PM</div>
+                    <div class="timeline-info">Dancing with DJ</div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-time">11:30 PM</div>
+                    <div class="timeline-info">First shuttle returns to the hotel</div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-time">1:00 AM</div>
+                    <div class="timeline-info">Mariachis and tacos to close the night!</div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-time">2:00 AM</div>
+                    <div class="timeline-info">Last shuttle to the hotel -- it's a long walk!</div>
+                </div>
             </div>
         </div>
         <!-- Spanish Timeline -->
         <div class="lang-es hidden">
             <h2>Programa del Evento</h2>
-            <div class="timeline-day">Miércoles</div>
-            <div class="timeline-item">
-                <div class="timeline-time">Todo el día</div>
-                <div class="timeline-info">La familia llega y se instala</div>
-            </div>
-            <div class="timeline-day">Jueves</div>
-            <div class="timeline-item">
-                <div class="timeline-time">Tarde</div>
-                <div class="timeline-info">Llegan los invitados, cena familiar en el restaurante Navios</div>
-            </div>
-            <div class="timeline-day">Viernes</div>
-            <div class="timeline-item">
-                <div class="timeline-time">7:00 PM</div>
-                <div class="timeline-info">Evento de bienvenida en el hotel: bebidas, canapés y convivencia</div>
-            </div>
-            <div class="timeline-day">Sábado</div>
-            <div class="timeline-item">
-                <div class="timeline-time">5:00 PM</div>
-                <div class="timeline-info">El transporte saldrá de Emporio</div>
-            </div>
-            <div class="timeline-item">
-                <div class="timeline-time">6:00 PM</div>
-                <div class="timeline-info">Comienza la ceremonia</div>
-            </div>
-            <div class="timeline-item">
-                <div class="timeline-time">7:00 PM</div>
-                <div class="timeline-info">Hora del cóctel</div>
-            </div>
-            <div class="timeline-item">
-                <div class="timeline-time">8:00 PM</div>
-                <div class="timeline-info">Cena con música de saxofón en vivo</div>
-            </div>
-            <div class="timeline-item">
-                <div class="timeline-time">10:00 PM</div>
-                <div class="timeline-info">Baile con DJ</div>
-            </div>
-            <div class="timeline-item">
-                <div class="timeline-time">11:30 PM</div>
-                <div class="timeline-info">El primer transporte saldrá de regreso al hotel</div>
-            </div>
-            <div class="timeline-item">
-                <div class="timeline-time">1:00 AM</div>
-                <div class="timeline-info">¡Mariachis y tacos para cerrar la noche!</div>
-            </div>
-            <div class="timeline-item">
-                <div class="timeline-time">2:00 AM</div>
-                <div class="timeline-info">El transporte saldrá de regreso al hotel</div>
+            <div class="timeline">
+                <div class="timeline-day">Miércoles</div>
+                <div class="timeline-item">
+                    <div class="timeline-time">Todo el día</div>
+                    <div class="timeline-info">La familia llega y se instala</div>
+                </div>
+                <div class="timeline-day">Jueves</div>
+                <div class="timeline-item">
+                    <div class="timeline-time">Tarde</div>
+                    <div class="timeline-info">Llegan los invitados, cena familiar en el restaurante Navios</div>
+                </div>
+                <div class="timeline-day">Viernes</div>
+                <div class="timeline-item">
+                    <div class="timeline-time">7:00 PM</div>
+                    <div class="timeline-info">Evento de bienvenida en el hotel: bebidas, canapés y convivencia</div>
+                </div>
+                <div class="timeline-day">Sábado</div>
+                <div class="timeline-item">
+                    <div class="timeline-time">5:00 PM</div>
+                    <div class="timeline-info">El transporte saldrá de Emporio</div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-time">6:00 PM</div>
+                    <div class="timeline-info">Comienza la ceremonia</div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-time">7:00 PM</div>
+                    <div class="timeline-info">Hora del cóctel</div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-time">8:00 PM</div>
+                    <div class="timeline-info">Cena con música de saxofón en vivo</div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-time">10:00 PM</div>
+                    <div class="timeline-info">Baile con DJ</div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-time">11:30 PM</div>
+                    <div class="timeline-info">El primer transporte saldrá de regreso al hotel</div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-time">1:00 AM</div>
+                    <div class="timeline-info">¡Mariachis y tacos para cerrar la noche!</div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-time">2:00 AM</div>
+                    <div class="timeline-info">El transporte saldrá de regreso al hotel</div>
+                </div>
             </div>
         </div>
     </section>
